--- a/templates/base.html
+++ b/templates/base.html
@@ -8,9 +8,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
-    <link rel="script" href="{% static 'bootstrap/js/bootstrap.min.js' %}">
     <link rel="stylesheet" href="{% static 'fontawesome/css/all.css' %}">
-    <link rel="script" href="{% static 'fontawesome/js/all.js' %}">
 <link rel="stylesheet" href="{% static 'css/main.css' %}">
 <title>{% block title %}
 {% endblock %}</title>
@@ -23,5 +21,8 @@
     {% block content %}
 
     {% endblock %}
+
+
+    <script src="{% static 'bootstrap/js/bootstrap.bundle.min.js' %}"></script>
 </body>
 </html>
