--- a/user/templates/profile.html
+++ b/user/templates/profile.html
@@ -8,18 +8,18 @@
 {% block content %}
 
 
-    <div class="container">
+    <div class="container my-5 border-bottom">
            <!-- Account detail -->
-        <div class="row justify-content-center my-5 border-bottom">
+        <div class="row justify-content-center my-3">
             <!--image-->
             <div class="col-2 img">
-                <img src="{% static 'user/images/user.png' %}" alt="picture" class="img-fluid rounded-circle" width="200" height="200">
+                <img src="{{ user.image.url }}" alt="picture" class="img-fluid rounded-circle" width="200" height="200">
             </div>
 
             <div class="col-4 detail">
                 <!--id & setting-->
                 <div>
-                    <h1 class="d-inline">{{ user.username }}</h1>
+                    <h1 class="d-inline">{{ user.user.username }}</h1>
                     <div class="btn" type="button" data-bs-toggle="modal" data-bs-target="#staticBackdrop"></button>
                         <span class="fas fa-cogs"></span>
                     </div>
@@ -50,7 +50,7 @@
                 </div>
                 <!--bio-->
                 <div class="bio">
-                    <h4>{{ account.bio }}</h4>
+                    <h4>{{ user.bio }}</h4>
                 </div>
             </div>
 
@@ -67,15 +67,15 @@
                                 <div class="title mt-3">
                                     <h1>Instagram</h1>
                                 </div>
-                                <form class="px-5 py-4" action="" method="post" enctype="multipart/form-data">
+                                <form class="px-5 py-4" action="{% url 'edit' user.user.id %}" method="post" enctype="multipart/form-data">
                                     {% csrf_token %}
-                                    <input class="form-control" type="text" name="first-name" placeholder="First Name" value="{{ user.first_name }}">
-                                    <input class="form-control my-3" type="text" name="last-name" placeholder="Last Name" value="{{ user.last_name }}">
-                                    <input class="form-control" type="email" name="email" placeholder="Email" value="{{ user.email }}">
-                                    <input class="form-control my-3" type="text" name="username" placeholder="Username" value="{{ user.username }}">
-                                    <input class="form-control" type="password" name="password1" placeholder="Password" value="{{ user.password }}">
-                                    <input class="form-control my-3" type="text" name="bio" placeholder="Bio" value="{{ account.bio }}">
-                                    <input class="form-control mb-5" type="file" accept="image/*" name="image" value="{{ account.image }}">
+                                    <input class="form-control" type="text" name="first-name" placeholder="First Name" value="{{ user.user.first_name }}">
+                                    <input class="form-control my-3" type="text" name="last-name" placeholder="Last Name" value="{{ user.user.last_name }}">
+                                    <input class="form-control" type="email" name="email" placeholder="Email" value="{{ user.user.email }}">
+                                    <input class="form-control my-3" type="text" name="username" placeholder="Username" value="{{ user.user.username }}">
+                                    <input class="form-control" type="password" name="password1" placeholder="Password" value="{{ user.user.password }}">
+                                    <input class="form-control my-3" type="text" name="bio" placeholder="Bio" value="{{ user.bio }}">
+                                    <input class="form-control mb-5" type="file" accept="image/*" name="image" value="{{ user.image }}">
 
                                     <input class="form-control btn btn-primary" type="submit" value="Edit">
                                 </form>
@@ -111,8 +111,8 @@
                                 <div class="card shadow-lg">
                                         <div class="header px-3 py-2">
                                                 <div class="user float-start">
-                                                    <img src="{% static 'user/images/user.png' %}" alt="" class="img-fluid rounded-circle me-2" width="50">
-                                                    <span>{{ user.username }}</span>
+                                                    <img src="{{ user.image.url }}" alt="" class="img-fluid rounded-circle me-2" width="50">
+                                                    <span>{{ user.user.username }}</span>
                                                 </div>
                                                 <div class="dot float-end pt-3">
                                                     <span class="fas fa-ellipsis-h"></span>
@@ -144,7 +144,7 @@
                                                     </div>
 
                                                     <div class="caption">
-                                                        <h5>{{ user.username }} :</h5>
+                                                        <h5>{{ user.user.username }} :</h5>
                                                         <p>{{ post.description }}</p>
 
                                                         <div class="date">
